--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ p {
   width: 100%;
   text-align: center;
   bottom: 0;
-  position: fixed;
+  position: static;
   background-color: rgb(231, 238, 235);
   font-size: 1rem;
   padding: 10px 0;
