--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap");
 
 :root {
-  --border-radius: 5px;
+  --border-radius: 10px;
   --box-shadow: 20px 10px 20px rgb(206, 209, 190);
 }
 
-html, body {
+html,
+body {
   width: 100vw;
   box-sizing: border-box;
   margin: 0;
@@ -21,7 +22,8 @@ html, body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  grid-gap: 30px;
+  grid-column-gap: 30px;
+  grid-row-gap: 25px;
   margin: 110px auto;
 }
 
@@ -73,7 +75,7 @@ html, body {
 .grid-item {
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
-  padding: 30px;
+  padding: 20px 30px;
 }
 
 .profile-box {
@@ -90,7 +92,7 @@ html, body {
 .img {
   width: 30px;
   height: 30px;
-  border: 2px solid rgba(255,255,255, 0.2);
+  border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 50%;
   margin-right: 15px;
 }
@@ -101,13 +103,13 @@ html, body {
 }
 
 .introduction {
-  margin-top: 15px;
+  margin-top: 12px;
   opacity: 0.8;
 }
 
 p {
   font-size: 13px;
-  line-height: 1.25rem;
+  line-height: 1.2rem;
   opacity: 0.7;
 }
 
